<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <!-- TITLE -->
    <TextView
        android:id="@+id/calibrationTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_marginStart="40dp"
        android:text="@string/calibration"
        android:textColor="@color/black"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Direction -->
    <TextView
        android:id="@+id/direction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/direction"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="#000"
        app:layout_constraintTop_toBottomOf="@id/calibrationTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp"/>

    <!-- Circular Progress -->
    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/circularProgress"
        android:layout_width="260dp"
        android:layout_height="260dp"
        android:indeterminate="false"
        app:indicatorSize="260dp"
        app:trackThickness="16dp"
        app:indicatorColor="#4CAF50"
        app:trackColor="#EAF3DE"
        app:layout_constraintTop_toBottomOf="@id/direction"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"/>

    <!-- Value -->
    <TextView
        android:id="@+id/calibrationValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        android:textSize="64sp"
        android:textStyle="bold"
        android:textColor="#000"
        app:layout_constraintTop_toTopOf="@id/circularProgress"
        app:layout_constraintBottom_toBottomOf="@id/circularProgress"
        app:layout_constraintStart_toStartOf="@id/circularProgress"
        app:layout_constraintEnd_toEndOf="@id/circularProgress"/>

    <!-- out of -->
    <TextView
        android:id="@+id/outOf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hundred"
        android:textSize="16sp"
        android:textColor="#666"
        app:layout_constraintTop_toBottomOf="@id/calibrationValue"
        app:layout_constraintStart_toStartOf="@id/circularProgress"
        app:layout_constraintEnd_toEndOf="@id/circularProgress"/>

    <!-- Hint -->
    <LinearLayout
        android:id="@+id/infoLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:paddingHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@id/circularProgress"
        app:layout_constraintBottom_toTopOf="@id/select_calibration"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@android:drawable/ic_lock_silent_mode_off"
            app:tint="@color/black"/>

        <TextView
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="8dp"
            android:text="@string/volume"
            android:textSize="17sp"
            android:textColor="@color/black"
            android:lineSpacingMultiplier="1.5"/>

    </LinearLayout>

    <!-- Select Button -->
    <Button
        android:id="@+id/select_calibration"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:text="@string/set_default"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:background="@drawable/bg_default"
        android:layout_marginHorizontal="24dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toTopOf="@id/bottomNavigation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- BOTTOM NAV -->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#4EB92B"
        app:menu="@menu/bottom_nav_menu"
        app:itemIconTint="@drawable/bottom_nav"
        app:itemTextColor="@drawable/bottom_nav"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>