<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/colorBackground">

    <!-- Title -->
    <TextView
        android:id="@+id/textPattern"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_marginStart="40dp"
        android:text="@string/pattern"
        android:textColor="@color/text_primary"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <!-- Subtitle -->
    <TextView
        android:id="@+id/subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info_signal"
        android:textSize="16sp"
        android:textColor="@color/text_secondary"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/textPattern"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/subtitle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info_signal2"
        android:textSize="16sp"
        android:textColor="@color/text_secondary"
        android:layout_marginStart="40dp"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/subtitle"
        app:layout_constraintStart_toStartOf="parent"/>

    <!-- Card Intensity -->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/singleMotor"
        android:layout_width="0dp"
        android:layout_height="130dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="35dp"
        android:layout_marginTop="50dp"
        app:cardCornerRadius="12dp"
        android:background="@drawable/bg_card"
        app:layout_constraintTop_toBottomOf="@id/subtitle2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <RelativeLayout
            android:id="@+id/button_single"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <ImageView
                android:id="@+id/imgSingle"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_centerVertical="true"
                android:background="@drawable/circle_green"
                android:padding ="15dp"
                android:src="@drawable/ic_single"/>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/imgSingle"
                android:layout_toStartOf="@id/imgCheckSingle"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="2dp"
                android:layout_centerVertical="true"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/single_motor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/single"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/text_primary"/>

                <TextView
                    android:id="@+id/info_single"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/info_single"
                    android:textColor="@color/text_secondary"
                    android:layout_marginTop="10dp"
                    app:layout_constraintTop_toBottomOf="@id/single_motor"
                    android:textSize="15sp"  />
            </LinearLayout>

            <ImageView
                android:id="@+id/imgCheckSingle"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_circle"/>

        </RelativeLayout>

    </com.google.android.material.card.MaterialCardView>

    <!-- Card Signal Pattern -->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/multiMotor"
        android:layout_width="0dp"
        android:layout_height="130dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="35dp"
        android:layout_marginTop="30dp"
        app:cardCornerRadius="12dp"
        android:background="@drawable/bg_card"
        app:layout_constraintTop_toBottomOf="@id/singleMotor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <RelativeLayout
            android:id="@+id/button_multi"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <ImageView
                android:id="@+id/imgMulti"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_centerVertical="true"
                android:background="@drawable/circle_green"
                android:padding ="15dp"
                android:src="@drawable/ic_multi"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/imgMulti"
                android:layout_toStartOf="@id/imgCheckMulti"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="5dp"
                android:layout_centerVertical="true"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/multi_motor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/multi"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/text_primary"/>

                <TextView
                    android:id="@+id/info_multi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/info_multi"
                    android:textColor="@color/text_secondary"
                    android:layout_marginTop="10dp"
                    app:layout_constraintTop_toBottomOf="@id/multi_motor"
                    android:textSize="15sp"  />
            </LinearLayout>

            <ImageView
                android:id="@+id/imgCheckMulti"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_circle"/>

        </RelativeLayout>
    </com.google.android.material.card.MaterialCardView>

    <!-- Card Signal Battery and Firmware -->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/sequenceMotor"
        android:layout_width="332dp"
        android:layout_height="126dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="35dp"
        app:cardCornerRadius="12dp"
        android:background="@drawable/bg_card"
        app:layout_constraintTop_toBottomOf="@id/multiMotor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <RelativeLayout
            android:id="@+id/button_sequence"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <ImageView
                android:id="@+id/imgSequence"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_centerVertical="true"
                android:background="@drawable/circle_green"
                android:padding="15dp"
                android:src="@drawable/ic_sequence" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="5dp"
                android:layout_toStartOf="@id/imgCheckSequence"
                android:layout_toEndOf="@id/imgSequence"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/sequence_motor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sequence"
                    android:textColor="@color/text_primary"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/info_sequence"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/info_sequence"
                    android:textColor="@color/text_secondary"
                    android:textSize="15sp"
                    app:layout_constraintTop_toBottomOf="@id/device_information" />
            </LinearLayout>

            <ImageView
                android:id="@+id/imgCheckSequence"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_circle" />

        </RelativeLayout>
    </com.google.android.material.card.MaterialCardView>

    <!-- Select Button -->
    <Button
        android:id="@+id/button_select_pattern"
        android:layout_width="359dp"
        android:layout_height="63dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/bg_green_selected"
        android:text="@string/set_default"
        android:textColor="@color/button_text"
        android:textSize="20sp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toTopOf="@id/bottomNavigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- BOTTOM NAV -->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigation"
        style="@style/BottomNavigationViewStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/app_background"
        app:menu="@menu/bottom_nav_menu"
        app:itemIconTint="@drawable/bottom_nav"
        app:itemTextColor="@drawable/bottom_nav_text"
        app:itemRippleColor="@color/app_background"
        app:itemHorizontalTranslationEnabled="false"
        app:labelVisibilityMode="labeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>