<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <!-- Title -->
    <TextView
        android:id="@+id/Settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_marginStart="40dp"
        android:text="@string/setting"
        android:textColor="@color/black"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <!-- Subtitle -->
    <TextView
        android:id="@+id/subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info_setting"
        android:textSize="16sp"
        android:textColor="#666666"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/Settings"
        app:layout_constraintStart_toStartOf="parent"/>

    <!-- Card Intensity -->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardIntensity"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="35dp"
        android:layout_marginTop="50dp"
        app:cardCornerRadius="12dp"
        app:strokeColor="#D9D9D9"
        app:strokeWidth="2dp"
        app:layout_constraintTop_toBottomOf="@id/subtitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <RelativeLayout
            android:id="@+id/button_intensity"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <ImageView
                android:id="@+id/imgIntensity"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_centerVertical="true"
                android:background="@drawable/circle_green"
                android:padding ="15dp"
                android:src="@drawable/intensity"
                app:tint="@color/icon_green" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/imgIntensity"
                android:layout_toStartOf="@id/imgForwardIntensity"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="10dp"
                android:layout_centerVertical="true"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/intensity"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/info_intensity"
                    android:textColor="#666666"
                    android:textSize="15sp" />
            </LinearLayout>

            <ImageView
                android:id="@+id/imgForwardIntensity"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_forward"/>

        </RelativeLayout>

    </com.google.android.material.card.MaterialCardView>

    <!-- Card Signal Pattern -->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardPattern"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="35dp"
        android:layout_marginTop="30dp"
        app:cardCornerRadius="12dp"
        app:strokeColor="#D9D9D9"
        app:strokeWidth="2dp"
        app:layout_constraintTop_toBottomOf="@id/cardIntensity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <RelativeLayout
            android:id="@+id/button_pattern"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <ImageView
                android:id="@+id/imgPattern"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_centerVertical="true"
                android:background="@drawable/circle_green"
                android:padding ="15dp"
                android:src="@drawable/pattern"
                app:tint="@color/icon_green" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/imgPattern"
                android:layout_toStartOf="@id/imgForwardPattern"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="10dp"
                android:layout_centerVertical="true"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pattern"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/info_pattern"
                    android:textSize="15sp"
                    android:textColor="#666666"/>
            </LinearLayout>

            <ImageView
                android:id="@+id/imgForwardPattern"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_forward"/>

        </RelativeLayout>

    </com.google.android.material.card.MaterialCardView>

    <!-- BOTTOM NAV -->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#4EB92B"
        app:menu="@menu/bottom_nav_menu"
        app:itemIconTint="@drawable/bottom_nav"
        app:itemTextColor="@drawable/bottom_nav"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>