<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <!-- Logo -->
    <ImageView
        android:id="@+id/feelSpace"
        android:layout_width="300dp"
        android:layout_height="90dp"
        android:src="@drawable/feel_space"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="70dp"/>

    <!-- Title -->
    <TextView
        android:id="@+id/GuideHand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="35sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/feelSpace"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp"/>

    <TextView
        android:id="@+id/HansAssistanceNavigationSystem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/HANS"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@android:color/darker_gray"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/GuideHand"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Bluetooth Icon -->
    <ImageView
        android:id="@+id/Bluetooth"
        android:layout_width="230dp"
        android:layout_height="230dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/check"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <!-- Button -->

    <!-- Bottom Navigation Background -->
    <Button
        android:id="@+id/button_connected"
        android:layout_width="290dp"
        android:layout_height="90dp"
        android:layout_marginTop="50dp"
        android:backgroundTint="#93EF73"
        android:text="@string/bracelet_connected"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Bluetooth" />

    <!-- Bottom Navigation -->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#4EB92B"
        app:menu="@menu/bottom_nav_menu"
        app:itemIconTint="@color/bottom_nav_icon"
        app:itemTextColor="@color/bottom_nav_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>